Bug 80894 - Fix rounding in scrollbar rect calculations
Summary: Fix rounding in scrollbar rect calculations
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Emil A Eklund
URL:
Keywords:
Depends on:
Blocks: 60318
  Show dependency treegraph
 
Reported: 2012-03-12 14:49 PDT by Emil A Eklund
Modified: 2012-03-12 16:51 PDT (History)
6 users (show)

See Also:


Attachments
Patch (6.84 KB, patch)
2012-03-12 14:59 PDT, Emil A Eklund
no flags Details | Formatted Diff | Diff
Patch for landing (6.83 KB, patch)
2012-03-12 15:57 PDT, Emil A Eklund
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Emil A Eklund 2012-03-12 14:49:39 PDT
Fix usage of subpixel units in RenderScrollbar::buttonRect and RenderScrollbar::trackRect.
Comment 1 Emil A Eklund 2012-03-12 14:59:59 PDT
Created attachment 131422 [details]
Patch
Comment 2 Eric Seidel (no email) 2012-03-12 15:43:24 PDT
Comment on attachment 131422 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=131422&action=review

> Source/WebCore/ChangeLog:16
> +        Add dummy isIntegerValue function, will be replaced with actual
> +        implementation once LayoutUnit is remapped to FractionalLayoutUnit.

What is this actual implementation going to do?  Check that the value is mod 60?
Comment 3 Levi Weintraub 2012-03-12 15:45:35 PDT
(In reply to comment #2)
> (From update of attachment 131422 [details])
> View in context: https://bugs.webkit.org/attachment.cgi?id=131422&action=review
> 
> > Source/WebCore/ChangeLog:16
> > +        Add dummy isIntegerValue function, will be replaced with actual
> > +        implementation once LayoutUnit is remapped to FractionalLayoutUnit.
> 
> What is this actual implementation going to do?  Check that the value is mod 60?

Yup :)
Comment 4 Emil A Eklund 2012-03-12 15:57:10 PDT
Created attachment 131431 [details]
Patch for landing
Comment 5 Emil A Eklund 2012-03-12 15:58:55 PDT
(Fixed typo in ChangeLog)
Comment 6 WebKit Review Bot 2012-03-12 16:51:26 PDT
Comment on attachment 131431 [details]
Patch for landing

Clearing flags on attachment: 131431

Committed r110505: <http://trac.webkit.org/changeset/110505>
Comment 7 WebKit Review Bot 2012-03-12 16:51:31 PDT
All reviewed patches have been landed.  Closing bug.