Fix rounding in scrollbar rect calculations https://bugs.webkit.org/show_bug.cgi?id=80894

Reviewed by Eric Seidel.

Fix usage of subpixel units in RenderScrollbar::buttonRect and
RenderScrollbar::trackRect.

No new tests, no new functionality.

* rendering/LayoutTypes.h:
(WebCore::isIntegerValue):
Add dummy isIntegerValue function, will be replaced with actual
implementation once LayoutUnit is remapped to FractionalLayoutUnit.

* rendering/RenderScrollbar.cpp:
(WebCore::RenderScrollbar::buttonRect):
(WebCore::RenderScrollbar::trackRect):
Change rect calculations to use pixel snapped values.

* rendering/RenderScrollbarPart.h:
(RenderScrollbarPart):
(WebCore::RenderScrollbarPart::marginTop):
(WebCore::RenderScrollbarPart::marginBottom):
(WebCore::RenderScrollbarPart::marginLeft):
(WebCore::RenderScrollbarPart::marginRight):
Add ASSERT to ensure that scrollbar parts are always aligned to device
pixels.


Canonical link: https://commits.webkit.org/98084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110505 268f45cc-cd09-0410-ab3c-d52691b4dbfc